# HLC

./: LICENSE
hlc-platform/: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  README.md  core  large_test.txt  test_restored.txt  tmp_output.hlc
hlc-platform/benches/: compression.rs
hlc-platform/examples/: usage_sdk.rs
hlc-platform/src/: chunk.rs  cli.rs  config.rs  container.rs  error.rs  lib.rs  main.rs  pipeline.rs
hlc-platform/src/transforms/: analyzer.rs  delta.rs  dictionary.rs  entropy.rs  mod.rs  rle.rs
hlc-platform/tests/: integration_test.rs
hlc-rust/: Cargo.toml  README.md  large_test.hlc  large_test.txt  test.hlc  test.json  test.json.hlc  test.txt
hlc-rust/.github/workflows/: ci.yml
hlc-rust/benches/: compression_bench.rs
hlc-rust/src/: analyzer.rs  checksum.rs  chunker.rs  container.rs  io.rs  lib.rs  main.rs  threadpool.rs
hlc-rust/src/entropy/: codec_utils.rs  mod.rs  range.rs
hlc-rust/src/transforms/: delta.rs  dictionary.rs  mod.rs  rle.rs
hlc-rust/tests/: integration_tests.rs
