[package]
name = "hlc"
version = "0.1.0"
edition = "2021"
authors = ["Project Vision Team"]
description = "Hybrid Lossless Compression (HLC) Platform"

[dependencies]
# CLI
clap = { version = "4.4", features = ["derive"] }

# Concurrency
rayon = "1.8"
crossbeam-channel = "0.5"
num_cpus = "1.16"

# Hashing and Checksums
crc32fast = "1.4"
sha2 = "0.10"

# Entropy Coder Backend
zstd = "0.13"

# Utilities
byteorder = "1.5"
bitflags = "2.6"
log = "0.4"
env_logger = "0.10"
indicatif = { version = "0.17", features = ["rayon"] }
thiserror = "1.0"

[dev-dependencies]
criterion = "0.5"
rand = "0.8"

[[bench]]
name = "compression"
harness = false

