[package]
name = "hlc"
version = "0.1.0"
edition = "2021"
authors = ["Project Vision Team"]
description = "Hybrid Lossless Compression (HLC) Platform"
license = "MIT"
repository = "https://github.com/example/hlc-platform"
keywords = ["compression", "lossless", "parallel", "performance"]
categories = ["compression", "command-line-utilities"]

[dependencies]
# CLI
clap = { version = "4.4", features = ["derive"] }

# Concurrency
rayon = "1.8"
crossbeam-channel = "0.5"
num_cpus = "1.16"

# Hashing and Checksums
crc32fast = "1.4"
sha2 = "0.10"

# Entropy Coder Backend
zstd = "0.13"

# Utilities
byteorder = "1.5"
log = "0.4"
env_logger = "0.10"
indicatif = { version = "0.17", features = ["rayon"] } # For progress bars
thiserror = "1.0"
bitflags = "2.4"

[dev-dependencies]
criterion = "0.5" # For benchmarking
rand = "0.8"
tempfile = "3.8"

[[bin]]
name = "hlc"
path = "src/main.rs"

[lib]
name = "hlc"
path = "src/lib.rs"

[[bench]]
name = "compression"
harness = false

[profile.release]
lto = true
codegen-units = 1
panic = "abort"