[package]
name = "hlc-rust"
version = "0.1.0"
edition = "2021"
authors = ["HLC Team"]
description = "High-Level Compression system with adaptive chunking and neural metadata assist"
license = "MIT"

[dependencies]
# CLI and argument parsing
clap = { version = "4.4", features = ["derive"] }

# Threading and concurrency
rayon = "1.8"
crossbeam = "0.8"
crossbeam-channel = "0.5"
tokio = { version = "1.0", features = ["full"] }

# Byte handling and serialization
bytes = "1.5"
bincode = "1.3"
byteorder = "1.5"
memmap2 = "0.9"

# Compression and entropy coding
lz4_flex = "0.11"
zstd = "0.13"

# Checksums and cryptography
crc32fast = "1.3"
sha2 = "0.10"
aes-gcm = "0.10"
ring = "0.17"

# Neural network inference (optional)
# onnxruntime = "0.1"

# Progress reporting
indicatif = "0.17"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Error handling
anyhow = "1.0"
thiserror = "1.0"
num_cpus = "1.0"

# Logging
log = "0.4"
env_logger = "0.10"

[dev-dependencies]
criterion = "0.5"
tempfile = "3.8"

[[bench]]
name = "compression_bench"
harness = false